Removed duplicated code for the list Fixed close button not showing in desktop view

--- a/src/app/themes/volumio/components/side-menu/volumio-side-menu.scss
+++ b/src/app/themes/volumio/components/side-menu/volumio-side-menu.scss
@@ -71,8 +71,14 @@ $sideMenuWidth: 230px;
       width: auto;
       border-bottom: none;
       background-color: none;
-      top: 10px;
-      right: 20px;
+      bottom: 0px;
+      right: 16px;
+
+      @include breakpoint(xs) {
+        bottom: auto;
+        top: 10px;
+        right: 20px;
+      };
     }
   }
 }
